# FerrisFood

./: .gitignore  Cargo.toml  docker-compose.yml
services/auth-service/: .env  Cargo.toml
services/auth-service/src/: main.rs
services/auth-service/src/config/: db.rs
services/auth-service/src/models/: customer.rs  mod.rs
services/delivery-partner-service/: Cargo.toml
