[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
dotenvy = "0.15.7"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
sqlx-cli = "0.8.6"
tokio = { version = "1.47.1", features = ["full"] }
tokio-postgres = "0.7.14"
uuid = {version= "1.18.1", features = ["serde"] }
